--- a/Public/myerp/css/gaopeng.css
+++ b/Public/myerp/css/gaopeng.css
@@ -25,5 +25,6 @@ ul.tablist_2
 
 .resultdiv{border-bottom:1px solid #CBDAE6;border-top:2px solid #CBDAE6; background-color:#F6F6F6; margin-bottom:10px; height:30px; line-height:30px; display:none}
 
-.cke_toolgroup { border: 1px solid #94C1E8;}
-.cke_icon{ border: 1px solid #94C1E8;}
+#content {
+	paggin-buttom:0px;
+}
