--- a/Public/myerp/css/gaopeng.css
+++ b/Public/myerp/css/gaopeng.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Microsoft Yahei',Verdana,arial,sans-serif;
+    font-size: 14px;
+}
 ul.tablist_2 li a.current:link, ul.tablist_2 li a.current:visited, ul.tablist_2 li a.current:hover
 {
     background: #4E8CCF;
